# lerobot-bench

./: README.md  pyproject.toml
lerobot_bench/: __init__.py  analyzer.py  cli.py  profiler.py  report.py  runner.py  stats.py
lerobot_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analyzer.py  test_integration.py  test_stats.py
